# simulation-to-gridworld-ros2

./: .gitignore  .gitmodules  README.md  custom_world_instructions.md  requirements.txt  setup.md
src/control/: ctf_multigrid_navigation.py  multiple_robots_movement.py  navigation.py  py_publisher_spiral.py  tb3_multigrid_navigation.py
src/control/multigrid_envs/: __init__.py  ctf_env.py  nav2_demo_env.py
src/ctf_package/: package.xml  setup.cfg  setup.py
src/ctf_package/ctf_package/: spawn_turtlebot.py  tf_broadcaster.py
src/ctf_package/launch/: 1v1_ctf.launch.py  1v1_test.launch.py  ctf_world.launch.py  empty_world.launch.py  robot_state_publisher.launch.py  rviz2.launch.py  single_robot_ctf.launch.py  single_robot_nav2.launch.py  spawn_multiple_turtlebots.launch.py  spawn_single_turtlebot.launch.py  spawn_turtlebot.launch.py  tb3_simulation_launch.py
src/ctf_package/map/: map.pgm  map.yaml
src/ctf_package/models/blue_flag/: model.config  model.sdf
src/ctf_package/models/floor/: model.sdf
src/ctf_package/models/middle_wall/: model.config  model.sdf
src/ctf_package/models/obstacles/: model.sdf
src/ctf_package/models/red_flag/: model.config  model.sdf
src/ctf_package/models/walls_small/: model.config  model.sdf
src/ctf_package/param/: turtlebot_0.yaml
src/ctf_package/rviz/: tb3_navigation2.rviz
src/ctf_package/turtlebot3_description/urdf/: turtlebot3_burger.urdf
src/ctf_package/worlds/ctf_worlds/: burger.model  ctf_world.world  easy_ctf.world
src/ctf_package/worlds/empty_worlds/: empty.world
src/tf2_demo/: package.xml  setup.cfg  setup.py
(+2 files in other folders)
